# temporis

./: .gitignore  BENCHMARK_README.md  CMakeLists.txt  README.md  benchmark_temporal_solvers.py  combined_temporal_analysis.json  compare_games.py  complex_temporal_game.dot  consolidate_results.py  consolidate_temporal_results.py  convert_tg_to_dot.py  generate_games.py  generate_interesting_games.py  generate_temporal_games.py  ontime_vs_temporis_semantic_differences.txt  presburger_temporal_graph_example  presburger_temporal_graph_example.cpp  run_benchmarks.py  simple_mixed_game.tg  simple_mixed_game_clean.dot
include/: dot_parser.hpp  ggg_temporal_graph.hpp  ggg_temporal_solver.hpp  presburger_formula.hpp  presburger_term.hpp  reachability_objective.hpp  static_expansion_solver.hpp  temporal_analyzer.hpp  temporal_game_application.hpp  temporal_game_demo.hpp  temporal_game_manager.hpp  temporal_reachability_solver.hpp  time_bound_calculator.hpp
input-files/: README.md  advanced_modulus.dot  advanced_presburger_game.dot  basic_reachability.dot  complex_temporal.dot  complex_temporal_game.dot  example_temporal.dot  existential_demo.dot  extreme_scalability_test.dot  final_proof.dot  invalid_test.dot  legacy_game.dot  modulus_test.dot  multiple_exists_test.dot  multiple_targets.dot  performance_test.dot  proof_variables.dot  reasonable_scalability_demo.dot  seven_variable_test.dot  simple_constraint_test.dot  simple_nested_test.dot  simple_temporal.dot  six_variable_optimal.dot  spec_test.dot  spec_test_commented.dot  test_01_basic.dot  test_02_existential.dot  test_03_multi_variable.dot  test_04_complex_game.dot  test_05_performance.dot  test_custom_variables.dot  test_reachability_basic.dot  test_reachability_objective.dot  test_simple_reach.dot  test_time_variable.dot
ontime_games/: test00001.tg  test00003.tg  test00004.tg  test00007.tg  test00008.tg  test00010.tg  test00011.tg  test00012.tg  test00015.tg  test00016.tg  test00017.tg  test00018.tg  test00020.tg  test00022.tg  test00023.tg  test00024.tg  test00026.tg  test00029.tg  test00032.tg  test00034.tg  test00035.tg  test00039.tg  test00041.tg  test00042.tg  test00043.tg  test00044.tg  test00046.tg  test00047.tg  test00048.tg  test00049.tg  test00053.tg  test00057.tg  test00059.tg  test00061.tg  test00062.tg  test00064.tg  test00065.tg  test00067.tg  test00068.tg  test00069.tg  (+1536 more)
ontime_results/: consolidated_results.json  ontime_benchmark.json  ontime_results.json
output-files/: analysis_reachability_basic.txt  analysis_reachability_objective.txt  analysis_simple_reach.txt  corrected_reachability_basic.txt
src/: dot_parser.cpp  ggg_temporal_graph.cpp  ggg_temporal_solver.cpp  main.cpp  main_ggg.cpp  main_static_expansion.cpp  presburger_formula.cpp  presburger_term.cpp  reachability_objective.cpp  static_expansion_solver.cpp  temporal_analyzer.cpp  temporal_game_application.cpp  temporal_game_demo.cpp  temporal_game_manager.cpp  temporal_reachability_solver.cpp  time_bound_calculator.cpp
temporal_games/: test002.tg  test003.tg  test008.dot  test008.tg  test010.dot  test010.tg  test013.dot  test013.tg  test014.dot  test014.tg  test015.tg  test017.tg  test019.dot  test020.tg  test021.tg  test022.tg  test025.tg  test027.dot  test027.tg  test028.tg  test029.dot  test029.tg  test030.tg  test031.tg  test032.tg  test034.dot  test035.dot  test035.tg  test036.tg  test037.tg  test038.dot  test039.tg  test040.tg  test041.dot  test041.tg  test043.dot  test044.dot  test049.tg  test052.tg  test054.tg  (+70 more)
temporal_results/: all_results.json
temporis_expansion_results/: temporis_static_expansion_results.json
temporis_games/: test00005.dot  test00008.dot  test00010.dot  test00011.dot  test00013.dot  test00014.dot  test00018.dot  test00020.dot  test00021.dot  test00022.dot  test00023.dot  test00025.dot  test00026.dot  test00028.dot  test00030.dot  test00040.dot  test00047.dot  test00050.dot  test00051.dot  test00055.dot  test00056.dot  test00065.dot  test00066.dot  test00069.dot  test00070.dot  test00071.dot  test00073.dot  test00076.dot  test00077.dot  test00079.dot  test00080.dot  test00082.dot  test00084.dot  test00085.dot  test00086.dot  test00090.dot  test00092.dot  test00099.dot  test001.dot  test00102.dot  (+1472 more)
temporis_results/: consolidated_results.json  temporis_backwards_results.json  temporis_benchmark.json
user_story_files/: create_clean_viz.py  visualize_performance.py
user_story_files/benchmark/: benchmark_results_detailed.json  test001.dot  test001.tg  test002.dot  test003.dot  test004.dot  test004.tg  test005.dot  test005.tg  test006.tg  test007.dot  test007.tg  test009.dot  test009.tg  test011.dot  test011.tg  test012.tg  test015.dot  test016.dot  test016.tg  test017.dot  test018.tg  test019.tg  test021.dot  test022.dot  test023.dot  test023.tg  test024.dot  test024.tg  test025.dot  test026.tg  test028.dot  test030.dot  test031.dot  test033.tg  test034.tg  test036.dot  test037.dot  test038.tg  test039.dot  (+119 more)
user_story_files/ontime_resources/: README.md  enhanced_batch_processor.py  (+8 more)
(+2009 files in other folders)
